--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "displayName": "MH Theme",
     "description": ":) Wena",
     "version": "0.0.1",
-    "publisher": "Miguel-HP",
+    "publisher": "Miguel Henriquez",
     "engines": {
         "vscode": "^1.56.0"
     },
