--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "displayName": "MH Theme",
     "description": ":) Wena",
     "version": "0.0.1",
-    "publisher": "Migue Henriquez",
+    "publisher": "MHP24",
     "engines": {
         "vscode": "^1.56.0"
     },
